--- a/.github/workflows/db.yml
+++ b/.github/workflows/db.yml
@@ -19,7 +19,7 @@ jobs:
             - name: Set up Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: '14'
+                  node-version: '18'
 
             - name: Install dependencies
               run: npm install
@@ -39,19 +39,22 @@ jobs:
         steps:
             - name: Checkout repository
               uses: actions/checkout@v4
-
             - name: Download database artifact
               uses: actions/download-artifact@v4
               with:
                   name: database
                   path: database.json
 
-            - name: Commit and push database.json
+            - name: Commit and push database.json to another repository
               run: |
+                  git clone https://github.com/partofmyid/database.git db
+                  cd db
                   git config --global user.name 'github-actions'
                   git config --global user.email 'github-actions@github.com'
+                  git config --unset-all http.https://github.com/.extraheader
+                  mv ../database.json .
                   git add database.json
                   git commit -m 'Update database.json'
                   git push
               env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
